sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/EmptyElseBlock.sand
pub class EmptyElseBlock {
    foo() {
        let a = if cond {
            b
        } else {
            
        };
    }
}